# docker-demo-with-python-uv

./: Dockerfile  README.md  app_flask.py  hello.py  model_build.py  pyproject.toml
