[project]
name = "docker-demo-with-python-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "numpy>=2.2.4",
    "polars>=1.27.1",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "seaborn>=0.13.2",
]
