[project]
name = "docker-demo-with-python-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "numpy>=2.2.4",
    "polars>=1.27.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "seaborn>=0.13.2",
]
